<resources>
    <string name="app_name">canvas</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="pen">Pen</string>
    <string name="rect">Rectangle</string>
    <string name="circle">Circle</string>
    <string name="triangle">Triangle</string>
    <string name="exit">Exit</string>
    <string name="share">Share</string>
</resources>
